Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/6994946/SyntaxErrorTest.out
SyntaxErrorTest.java:14:10: compiler.err.expected: ';'
1 error
